# Soranus

./: CMakeLists.txt  README.md
Soranus/: CMakeLists.txt  Message.hpp  README.md  Soranus.cpp  Soranus.hpp
Soranus/Exchange/: CMakeLists.txt  IExchange.hpp
Soranus/Exchange/crypto/: CMakeLists.txt
Soranus/Exchange/crypto/ftx/: CMakeLists.txt  FTXExchange.cpp  FTXExchange.hpp  FTXExchangeExports.hpp  ftx_api.py  ftx_api_test.py
Soranus/Exchange/crypto/ftx/ftx_websocket/: client.py
Soranus/Exchange/stocks/: CMakeLists.txt
Soranus/Interface/: CMakeLists.txt  IRepository.hpp  IScene.hpp  ISoranus.hpp  IUI.hpp  README.md
Soranus/Modules/: CMakeLists.txt  README.md
Soranus/Modules/JsonModule/: CMakeLists.txt  JsonModule.cpp  JsonModule.hpp
Soranus/Modules/PluginModule/: CMakeLists.txt  FeatureConfiguration.cpp  FeatureConfiguration.hpp  IPlugin.hpp  PluginCollection.cpp  PluginCollection.hpp  PluginModule.hpp  WinPlugin.cpp  WinPlugin.hpp
Soranus/Modules/PythonModule/: CMakeLists.txt  CPyObject.hpp  CpyObject.cpp  IPythonApp.hpp  PyVariant.hpp  PythonModule.hpp  README.md  UnWrapPython.hpp  WrapPython.hpp
Soranus/Modules/SoranusModule/: CMakeLists.txt  SoranusModule.cpp  SoranusModule.hpp
Soranus/Modules/StateModule/: CMakeLists.txt  StateModule.cpp  StateModule.hpp
Soranus/Modules/ThreadModule/: CMakeLists.txt  ThreadModule.cpp  ThreadModule.hpp
Soranus/Plugins/: CMakeLists.txt
Soranus/Plugins/ComparatorPlugin/ComparatorPlugin/: CMakeLists.txt
Soranus/Plugins/ComparatorPlugin/libComparatorPlugin/: CMakeLists.txt
Soranus/Test/: README.md
